<resources>
    <string name="app_name">AuthenticatorApplication</string>
    <string name="register">Register</string>
    <string name="email">email</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="submbit">Submbit</string>
    <string name="already_a_member">Already a Member?</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="you_are_now_logged_in">You are now logged in!</string>
    <string name="log_out">Log Out</string>
    <string name="button">Button</string>
</resources>
